<?xml version="1.0" encoding="utf-8"?>

<!-- 
    Copyright 2013 The Last Crusade ContactLastCrusade@gmail.com
    
    This file is part of SoundStream.
    
    SoundStream is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    
    SoundStream is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    
    You should have received a copy of the GNU General Public License
    along with SoundStream.  If not, see <http://www.gnu.org/licenses/>. -->

<resources>
	
    <string name="app_uuid">e271f460-d1ad-4ea8-b555-5e59b19c71ff</string>
    <string name="app_name">Sound Stream</string>
    <string name="app_name_no_spaces">SoundStream</string>
    
    <string name="enable">Enable</string>
    <string name="enable_bluetooth">Enable Bluetooth&#x2026;</string>
    <string name="ask_enable_bluetooth">SoundStream needs to enable Bluetooth to continue.  Press Enable to enable Bluetooth.</string>
    <string name="enabling_bluetooth">Enabling Bluetooth&#x2026;</string>
    <string name="finding_new_guests">Finding new guests&#x2026;</string>
    <string name="found_guests">Found guests</string>
    <string name="select_guests">Select guests&#x2026;</string>
    <string name="no_guests_found">No guests found</string>    
    
    <string name="now_playing">Now Playing</string>
    
    <!-- button labels -->
    <string name="add_members">Add Members to Network</string>
    <string name="connect">Select</string>
    <string name="create_network">Create</string>
    <string name="join_network">Join as \"%1$s\"</string>
    <string name="join_different_network">Switch Networks</string>
    
    
    <!-- text labels -->
    <string name="cur_member_label">Currently Connected Members</string>
    <string name="music_label">Music</string>
    <string name="network_label">Network</string>
    <string name="removed_label">Removed:</string>
    <string name="results_label">Results</string>

    
    <!--  fragment titles -->
	<string name="network">Network</string>
	<string name="music_library">Music Library</string>
	<string name="playlist">Playlist</string>
    <string name="disconnect">Disconnect</string>
	
	<!-- other things -->
	<string name="add_to_playlist">Add To Playlist</string>
	<string name="remove_from_playlist">Remove From Playlist</string>
    <string name="song_item_division">-</string>
    <string name="dialog_disconnect">Are you sure that you want to disconnect?</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>

    <string name="no_songs_in_playlist">There are no songs in your playlist! Quick, go add some from the music library!</string>
    <string name="disband">Disband</string>
    <string name="dialog_disband">Are you sure you want to disband? This will boot any connected users.</string>

    <string name="searching">Searching...</string>
   <string name="join_instructions">Make sure someone in the network has pressed \'Add Members to Network\'</string>
   <string name="add_instructions">Make sure the person you are trying to add has pressed \'Join\'</string>
    <!-- default values -->
    <string name="default_mac">00:08:67:53:09</string>
    <string name="default_name">Indiana Jones</string>

    <!-- about things -->
    <string name="about">About</string>
    <string name="meet_label">Meet the Team</string>
    <string name="team">Reid Baker\nDavid Greenhalgh\nElizabeth Johnson\nJesse Rosalia\nTaylor Wrobel</string>
    <string name="thanks_label">Special Thanks</string>
    <string name="thanks_appcompat"><u>AppCompat</u></string>
    <string name="thanks_SlidingMenu"><u>SlidingMenu</u></string>
    <string name="thanks_Troy">Troy Peace - a super sponsor, without whom none of this would be possible</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="repo_link_text"><u>Our GitHub repo</u></string>
    <string name="repo_link">https://github.com/TheLastCrusade/SoundStream</string>
    <string name="sliding_menu_link">https://github.com/jfeinstein10/SlidingMenu</string>
    <string name="appcompat_link">http://developer.android.com/tools/support-library/features.html</string>
    <string name="beta_help_instructions">SoundStream is currently in beta, so if you run into an issue, email us at:</string>
    <string name="email_link_text"><u>SoundStreamHelp@gmail.com</u></string>
    <string name="email_support_address">SoundStreamHelp@gmail.com</string>
    <string name="email_subject_tag">[SoundStream Beta]</string>
    <string name="credit_label">Credit</string>
    <string name="brought_to_you_by">SoundStream is built on top of the following fine open source projects:</string>

    <string name="welcome">Welcome to SoundStream!\n\nFor some basic instructions and hints, press Next.</string>
	<string name="welcome_connection">Create a new network by pressing Create, or join an existing network by pressing Join and asking a friend to let you in.</string>
	<string name="welcome_music">Add music to your playlist through the Music Library page.\n\nIf there is no music there, check out the SoundStream wiki for information on how to add music to your phone.</string>
	<string name="welcome_network">To view information about the network, go the the Network page.\n\n From there you can add members to the network, disconnect, or switch networks. </string>
	<string name="instructions_label">Instructions</string>
	<string name="instructions">View the startup instructions again</string>
	
	<!-- search things -->
	<string name="search_hint">Search Music</string>
	<string name="search">Search</string>
	<string name="results">Results</string>

	<!-- Crash reporting -->
	<string name="crash_dialog_title">That\'s not right…</string>
	<string name="crash_dialog_text">You seem to have hit a snag with SoundStream.  Is it cool if we take some error data to help fix it?</string>
	<string name="crash_dialog_comment_prompt">Want to fill us in on what happened? (Optional)</string>
	<string name="crash_dialog_ok_toast">We appreciate it!</string>
</resources>
