<!-- 
    Copyright 2013 The Last Crusade ContactLastCrusade@gmail.com
    
    This file is part of SoundStream.
    
    SoundStream is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    
    SoundStream is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    
    You should have received a copy of the GNU General Public License
    along with SoundStream.  If not, see <http://www.gnu.org/licenses/>. -->

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	
	    <!-- Meet the Crusaders -->
	    <RelativeLayout
	        android:id="@+id/meet_the_team"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp" 
	        >
	
	
	        <TextView 
	            android:id="@+id/meet_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/meet_label"
	            android:textSize="18sp"
	            
	            />
	        
	        <View
	            android:id="@+id/meet_line"
	            android:layout_width="fill_parent"
	            android:layout_height="2dp"
	            android:layout_marginTop="3dp"
	            android:layout_marginBottom="10dp"
	            android:layout_below="@id/meet_label"
	            android:background="@color/accent_blue" 
	            />
	
	        <TextView 
	            android:id="@+id/meet_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/meet_line"
	            android:layout_marginLeft="10dp"
	            android:textSize="16sp"
	            android:text="@string/team"
	            />
	        
	    </RelativeLayout>
	    
	    <!-- Contact Us -->
	    <RelativeLayout 
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" 
            >
            
            <TextView
                android:id="@+id/contact_us_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_label"
                android:textSize="18sp"
                />
            
            <View
                android:id="@+id/contact_us_line"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/contact_us_label"
                android:background="@color/accent_blue" 
                />
            
            <TextView
                android:id="@+id/repo_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/repo_link_text"
                android:textColor="@color/link_blue"
                android:layout_below="@id/contact_us_line"
                android:textSize="16sp"
                />
            
            <TextView
                android:id="@+id/beta_help_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/beta_help_instructions"
                android:layout_below="@id/repo_link"
                android:textSize="16sp"
                />
            
            <TextView
                android:id="@+id/email_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/email_link_text"
                android:textColor="@color/link_blue"
                android:layout_below="@id/beta_help_instructions"
                android:textSize="16sp"
                />
                        
        </RelativeLayout>
	
	    <!-- Special Thanks -->
	    <RelativeLayout
	        android:id="@+id/special_thanks"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        >
	
	        <TextView
	            android:id="@+id/special_thanks_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/thanks_label"
	            android:textSize="18sp"/>
	
	        <View
	            android:id="@+id/thanks_line"
	            android:layout_width="fill_parent"
	            android:layout_height="2dp"
	            android:layout_marginTop="3dp"
	            android:layout_marginBottom="10dp"
	            android:layout_below="@id/special_thanks_label"
	            android:background="@color/accent_blue" 
	            />
       
	       <TextView
               android:id="@+id/thanks_Troy"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:text="@string/thanks_Troy"
               android:layout_below="@id/thanks_line"
               android:textSize="16sp"
               />
	       
	    </RelativeLayout>
	    
	    <!-- Credit -->
	    <RelativeLayout
	    	android:id="@+id/credit "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >
	       
	    	<TextView
                android:id="@+id/credit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_label"
                android:textSize="18sp"/>
    
            <View
                android:id="@+id/credit_line"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/credit_label"
                android:background="@color/accent_blue" 
                />
            
            <TextView 
            	android:id="@+id/brought_to_you_by"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="10dp"
            	android:text="@string/brought_to_you_by"
            	android:layout_below="@id/credit_line"
            	android:textSize="16sp"
            	/>
	       
	    	<TextView
               android:id="@+id/thanks_ABS"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:text="@string/thanks_ABS"
               android:textColor="@color/link_blue"
               android:layout_below="@id/brought_to_you_by"
               android:textSize="16sp"
               />
           
           <TextView
               android:id="@+id/thanks_SlidingMenu"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:text="@string/thanks_SlidingMenu"
               android:textColor="@color/link_blue"
               android:layout_below="@id/thanks_ABS"
               android:textSize="16sp"
               />
	    </RelativeLayout>
	    
	    
	</LinearLayout>
</ScrollView>
