<?xml version="1.0" encoding="utf-8"?>

<!-- 
    Copyright 2013 The Last Crusade ContactLastCrusade@gmail.com
    
    This file is part of SoundStream.
    
    SoundStream is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    
    SoundStream is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    
    You should have received a copy of the GNU General Public License
    along with SoundStream.  If not, see <http://www.gnu.org/licenses/>. -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
	 android:layout_height="match_parent"
    >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical"
	    >
	
	    <TextView 
	        android:id="@+id/connected_users_label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/cur_member_label"
	        android:layout_margin="8dp"
	        android:textSize="20sp"
	        />
	    
	    <LinearLayout
	        android:id="@+id/connected_users"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:paddingBottom="20dp"
	        android:divider="@color/transparent"
	        android:orientation="vertical"
	        />
	
	    <!-- add new memebers -->
	    <LinearLayout 
	        android:id="@+id/add_members"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/gray"
	        android:layout_margin="10dp"
	        >
	        
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:background="@color/white"
		        android:layout_margin="3dp">
			    
			    <ImageView 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:src="@drawable/add_new_members"
			     	/>
			    
			    <!-- Text at the bottom of image -->
			    <RelativeLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" 
		            >
	
		            <View
		                android:layout_width="match_parent"
		                android:layout_height="36dp"
		                android:layout_alignParentBottom="true"
		                android:alpha=".18"
		                android:background="@color/accent_blue"/>
		
		            <TextView 
		                android:text="@string/add_members"
		                android:textSize="18sp"
		                android:padding="6dp"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_alignParentBottom="true"
		                />
		            
		        </RelativeLayout>			        
		    </LinearLayout>
	    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false"
	        android:layout_marginRight="10dp"
	        android:layout_marginLeft="10dp"
	        >
	        
		    <!-- Disconnect -->
		    <LinearLayout 
		        android:id="@+id/disconnect_disband_btn"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:background="@color/gray"
		        android:layout_marginRight="10dp"
		        >
		        
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical"
			        android:background="@color/white"
			        android:layout_margin="3dp">
				    
				    <ImageView 
				        android:layout_width="match_parent"
				        android:layout_height="60dp"
				        android:padding="10dp"
				        android:src="@drawable/disconnect"
				     	/>
				    
				    <!-- Text at the bottom of image -->
				    <RelativeLayout
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content" 
			            >
		
			            <View
			                android:layout_width="match_parent"
			                android:layout_height="36dp"
			                android:layout_alignParentBottom="true"
			                android:alpha=".18"
			                android:background="@color/accent_blue"/>
			
			            <TextView 
			                android:id="@+id/disconnect_disband_label"
			                android:text="@string/disconnect"
			                android:textSize="18sp"
			                android:padding="6dp"
			                android:layout_width="match_parent"
			                android:layout_height="wrap_content"
			                android:layout_alignParentBottom="true"
			                />
			            
			        </RelativeLayout>			        
			    </LinearLayout>
		    
		    </LinearLayout>  
		   
		    <LinearLayout 
		        android:id="@+id/join_different_network_btn"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:background="@color/gray"
		        >
		        
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical"
			        android:background="@color/white"
			        android:layout_margin="3dp">
				    
				    <ImageView 
				        android:layout_width="match_parent"
				        android:layout_height="60dp"
				        android:padding="10dp"
				        android:src="@drawable/soundstream_launcher"
				     	/>
				    
				    <!-- Text at the bottom of image -->
				    <RelativeLayout
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content" 
			            >
		
			            <View
			                android:layout_width="match_parent"
			                android:layout_height="36dp"
			                android:layout_alignParentBottom="true"
			                android:alpha=".18"
			                android:background="@color/accent_blue"/>
			
			            <TextView 
			                android:text="@string/join_different_network"
			                android:textSize="18sp"
			                android:padding="6dp"
			                android:layout_width="match_parent"
			                android:layout_height="wrap_content"
			                android:layout_alignParentBottom="true"
			                />
			            
			        </RelativeLayout>			        
			    </LinearLayout>
		    
		    </LinearLayout>
		
		        
	    </LinearLayout>
	
	    
	
	
	</LinearLayout>
</ScrollView>

